k8s-on-premise-cloud/kong-gateway/kong-admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-admin-ingress
  namespace: kong
spec:
  ingressClassName: nginx
  rules:
    - host: kong-admin.nhatanhmovieweb.shop
      http: 
        paths: 
          - backend: 
              service:
                name: kong-gateway-kong-admin
                port: 
                  number: 8001
            path: /
            pathType: Prefix
