k8s-on-premise-cloud/kong-gateway/kong-manager-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-manager-ingress
  namespace: kong
spec:
  ingressClassName: nginx
  rules:
    - host: kong-manager.nhatanhmovie.website
      http: 
        paths: 
          - backend: 
              service:
                name: kong-gateway-kong-manager
                port: 
                  number: 8002
            path: /
            pathType: Prefix
