k8s-on-premise-cloud/kong-gateway/kong-proxy-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-proxy-ingress
  namespace: kong
spec:
  ingressClassName: nginx
  rules:
    - host: kong-proxy.nhatanhmovie.website
      http: 
        paths: 
          - backend: 
              service:
                name: kong-gateway-kong-proxy
                port: 
                  number: 8000
            path: /
            pathType: Prefix
